still need more css

--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 				<tr>
 				  	<th><h2>Computer Choice: </h2></th>
 					<th><h2>Your Choice: </h2></th>
-					<th><h2>Result: </h2></th>
 				</tr>
 				<tr>
 				  <td><h2 id = "computer-choice"></h2></td>
 				  <td><h2 id = "user-choice"></h2></td>
-				  <td><h2 id = "result"></h2></td>
 				</tr>
 			</table>
-			<div class="div-center">
+			<div class="center">
 				<button class = "button" id="rock">rock</button>
 				<button class = "button" id="paper">paper</button>
 				<button class = "button" id="scissors">scissors</button>
 			</div>
+				<h2 id = "result"></h2>
 		</div>
 
     	<script src="app.js" charset="utf-8"></script>
